[gd_scene load_steps=5 format=3 uid="uid://defsnniut2dlh"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_exi6j"]
[ext_resource type="LabelSettings" uid="uid://cly0qifo3vy8e" path="res://Resources/DebugUIFont.tres" id="2_j8djp"]

[sub_resource type="Gradient" id="Gradient_s8n71"]
colors = PackedColorArray(0, 0, 0, 0.235294, 0, 0, 0, 0.235294)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cx8b1"]
gradient = SubResource("Gradient_s8n71")

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_exi6j")

[node name="StatsVBox_DEBUG" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="HP_Label_DEBUG" type="Label" parent="StatsVBox_DEBUG"]
layout_mode = 2
text = "HP = 1"
label_settings = ExtResource("2_j8djp")

[node name="MP_Label_DEBUG" type="Label" parent="StatsVBox_DEBUG"]
layout_mode = 2
text = "MP = 1"
label_settings = ExtResource("2_j8djp")

[node name="ST_Label_DEBUG" type="Label" parent="StatsVBox_DEBUG"]
layout_mode = 2
text = "Stamina  = 1"
label_settings = ExtResource("2_j8djp")

[node name="ACTIVE_SPELL_Label_DEBUG" type="Label" parent="StatsVBox_DEBUG"]
layout_mode = 2
text = "Active Spell:"
label_settings = ExtResource("2_j8djp")

[node name="ACTIVE_ITEM_Label_DEBUG" type="Label" parent="StatsVBox_DEBUG"]
layout_mode = 2
text = "Active Item: Monster Trap"
label_settings = ExtResource("2_j8djp")

[node name="HAS_LEY_Label_DEBUG" type="Label" parent="StatsVBox_DEBUG"]
layout_mode = 2
text = "Has Key: NO"
label_settings = ExtResource("2_j8djp")

[node name="StatsBackground_DEBUG" type="TextureRect" parent="."]
offset_right = 394.0
offset_bottom = 281.0
texture = SubResource("GradientTexture2D_cx8b1")
